# sot-server-finder

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs  wordlist.rs
