[package]
name = "sot-server-finder"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.13.0"
libloading = "0.7.4"
pcap = "1.0.0"
sysinfo = "0.28.2"
winroute = "0.2.0"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip-extract = "0.1.2"
winresource = "0.1.17"
